Added Custom Image Body

--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ inputs:
     description: 'Custom activity image URL'
     required: false
     default: 'https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
-  custom_text:
+  custom_image_url:
     description: 'Custom message text for Teams card'
     required: false
     default: ''
@@ -46,7 +46,7 @@ runs:
         THEME_COLOR: ${{ inputs.theme_color }}
         CUSTOM_TITLE: ${{ inputs.custom_title }}
         ACTIVITY_IMAGE: ${{ inputs.activity_image }}
-        CUSTOM_TEXT: ${{ inputs.custom_text }}
+        CUSTOM_IMAGE: ${{ inputs.custom_image_url }}
       run: |
         # Function to check if a variable is empty
         is_empty() {
@@ -88,7 +88,6 @@ runs:
         PR_CREATOR_ESCAPED=$(escape_string "$PR_CREATOR")
         REPO_NAME_ESCAPED=$(escape_string "$REPO_NAME")
         PR_URL_ESCAPED=$(escape_string "$PR_URL")
-        CUSTOM_TEXT_ESCAPED=$(escape_string "$CUSTOM_TEXT")
 
         # Send the notification
         curl -H "Content-Type: application/json" -d '{
@@ -96,7 +95,6 @@ runs:
           "@context": "http://schema.org/extensions",
           "themeColor": "'"$THEME"'",
           "summary": "New PR: '"$TITLE_ESCAPED"'",
-          "text": "'"$CUSTOM_TEXT_ESCAPED"'",
           "sections": [{
             "activityTitle": "New Pull Request in '"$REPO_NAME_ESCAPED"'",
             "activitySubtitle": "Created by '"$PR_CREATOR_ESCAPED"'",
@@ -110,7 +108,10 @@ runs:
             }, {
               "name": "Repository",
               "value": "'"$REPO_NAME_ESCAPED"'"
-            }],
+            }, {
+              "name": "Message",
+              "value": "![Image]('"$CUSTOM_IMAGE"')"
+            } ],
             "markdown": true
           }],
           "potentialAction": [{
